# bootstrap-project

./: .env-example  .gitignore  Dockerfile  Dockerfile.chainlit  Dockerfile.langgraph  Makefile  README.md  chainlit.conf  docker-compose.yml  main.py  main_refactor.py  pyproject.toml  queries.py  requirements.txt
src/evaluations/: evaluate.py
src/site_bot_opik/graph/: graph.py
src/site_bot_opik/interface/: chainlit.py
