[build-system]
requires = ["setuptools>=75.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "site_bot_opik"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "ipython>=9.7.0",
    "langchain-community>=0.4.1",
    "langchain-text-splitters>=1.0.0",
    "langchain[openai]>=1.1.0",
    "langgraph>=1.0.4",
    "opik>=1.9.37",
    "pypdf>=6.4.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["site_bot_opik*"]
